# FastGet

./: CMakeLists.txt
src/: main.cpp
src/core/: DownloadManager.cpp  DownloadManager.hpp  DownloadTask.cpp  DownloadTask.hpp
src/network/: DownloadWorker.cpp  DownloadWorker.hpp
src/ui/: AddDownload.cpp  AddDownload.hpp  DownloadStatusUtils.cpp  DownloadStatusUtils.hpp  MainWindow.cpp  MainWindow.hpp
